@@ -11,19 +11,19 @@ Features:
 	--- examples/intro.py ---
 
 	import datetime
-	from pysocialbot import launcher, twitter
+	from pysocialbot import action, trigger, launcher, twitter
 	 
 	def posttime(env):
 	    return env.api.post(datetime.datetime.today().strftime("It's %I %p!"))
 	 
 	if __name__ == "__main__":
 	    BOT = launcher.Daemon()
-	    BOT.trigger = {launcher.Hourly(): launcher.Call(posttime)}
+	    BOT.trigger = {trigger.Hourly(): action.Call(posttime)}
 	    BOT.resetstate()
-	    BOT.env.api = twitter.Api("MyAccount")
+	    BOT.env.api = twitter.Api()
 	    BOT.run()
-
-	So, you can create bot only 10 lines using PySocialBot.
+	
+	You can create bot only 10 lines using PySocialBot.
 
 Getting Started:
 	See examples/manage.default.py.
