@@ -4,5 +4,5 @@ Python Bot Framework
 __author__ = "Fumiaki Kinoshita"
 __credits__ = ["Fumiaki Kinoshita"]
 __license__ = "BSD"
-__version__ = "0.3.0"
+__version__ = "0.3.1"
 __status__ = "Development"
